@@ -1,3 +1,7 @@
+2013-01-17  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	Rewrite spkmodem to use PIT for timing. Double the speed.
+
 2013-01-16  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	Add new command pcidump.
